# HydroFanControl

./: CMakeLists.txt  README.md  ledmode.cpp  ledmode.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
